--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: weather-service
   datasource:
-    password: Mormoloc09!
+    password: password
     username: postgres
     url: jdbc:postgresql://localhost:5432/postgres
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       naming:
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
     open-in-view: false
@@ -17,9 +17,8 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-
-
-
+  flyway:
+    baseline-on-migrate: true
 configuration:
   open-weather:
     appid: 02f6d80d4eb4063b7e1e98ac6b6c5f31
